--- a/java.html
+++ b/java.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <p>
-        This is a test
+        Trying out git
         </p>
         
             <script src="simple.js"></script>
