--- a/try.html
+++ b/try.html
@@ -18,6 +18,12 @@
                 <td> First name;</td>
                 <td><input type="text"></td>
             </tr>
+            <tr>
+
+                <td>Course</td>
+                <td><input type="text"maxlength="30" value="">
+            </tr>
+
     
 </body>
 </html>
